<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.github.auties00</groupId>
        <artifactId>protobuf-serialization</artifactId>
        <version>1.22</version>
    </parent>

    <artifactId>protobuf-serializer-performance</artifactId>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <encoding>UTF-8</encoding>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.openjdk.jmh</groupId>
                            <artifactId>jmh-generator-annprocess</artifactId>
                            <version>1.35</version>
                        </path>
                    </annotationProcessorPaths>
                    <compilerArgs>
                        <compilerArg>--enable-preview</compilerArg>
                        <compilerArg>--add-exports=java.base/sun.reflect.annotation=it.auties.protobuf.serializer.performance</compilerArg>
                        <compilerArg>--add-exports=java.base/sun.reflect.generics.factory=it.auties.protobuf.serializer.performance</compilerArg>
                        <compilerArg>--add-exports=java.base/sun.reflect.generics.parser=it.auties.protobuf.serializer.performance</compilerArg>
                        <compilerArg>--add-exports=java.base/sun.reflect.generics.scope=it.auties.protobuf.serializer.performance</compilerArg>
                        <compilerArg>--add-exports=java.base/sun.reflect.generics.visitor=it.auties.protobuf.serializer.performance</compilerArg>
                        <compilerArg>--add-exports=java.base/jdk.internal.reflect=it.auties.protobuf.serializer.performance</compilerArg>
                        <compilerArg>--add-exports=java.base/jdk.internal.access=it.auties.protobuf.serializer.performance</compilerArg>
                        <compilerArg>--add-exports=java.base/sun.reflect.generics.tree=it.auties.protobuf.serializer.performance</compilerArg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <source>${java.version}</source>
                    <failOnError>true</failOnError>
                    <additionalOptions>--enable-preview --add-exports java.base/sun.reflect.annotation=it.auties.protobuf.serializer.performance --add-exports java.base/sun.reflect.generics.factory=it.auties.protobuf.serializer.performance --add-exports java.base/sun.reflect.generics.parser=it.auties.protobuf.serializer.performance --add-exports java.base/sun.reflect.generics.scope=it.auties.protobuf.serializer.performance --add-exports java.base/sun.reflect.generics.visitor=it.auties.protobuf.serializer.performance --add-exports java.base/jdk.internal.reflect=it.auties.protobuf.serializer.performance --add-exports java.base/jdk.internal.access=it.auties.protobuf.serializer.performance --add-exports java.base/sun.reflect.generics.tree=it.auties.protobuf.serializer.performance</additionalOptions>
                    <debug>true</debug>
                    <verbose>true</verbose>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.github.auties00</groupId>
            <artifactId>protobuf-base</artifactId>
            <version>1.22</version>
        </dependency>
        <dependency>
            <groupId>com.github.auties00</groupId>
            <artifactId>protobuf-serialization-base</artifactId>
            <version>1.22</version>
        </dependency>
    </dependencies>
</project>